deleted unnecessary icons (png's)

--- a/about.html
+++ b/about.html
@@ -11,10 +11,11 @@
 	
 		<nav id="nav">
 			<ul>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="contact.html">CONTACT</a><li>
-				<li><a href="Assignment4/index.html">PROJECT 1</a></li>
-				<li><a href="HW2Column/HW2Column.html">PROJECT 2</a></li>
+					<li><a href="Assignment4/index.html" target="_blank">PROJECT 1</a></li>
+				<li><a href="HW2Column/HW2Column.html" target="_blank">PROJECT 2</a></li>
 			</ul>
 		</nav>	
 			<p>
