--- a/contact.html
+++ b/contact.html
@@ -11,19 +11,21 @@
 	
 		<nav id="nav">
 			<ul>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="contact.html">CONTACT</a><li>
-				<li><a href="Assignment4/index.html">PROJECT 1</li>
-				<li><a href="HW2Column/HW2Column.html">PROJECT 2</li>
+					<li><a href="Assignment4/index.html" target="_blank">PROJECT 1</a></li>
+				<li><a href="HW2Column/HW2Column.html" target="_blank">PROJECT 2</a></li>
 			</ul>
 		</nav>	
 		<img src="http://imgur.com/8QVjwQ1.jpg">
 		<p>Email: <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">jul.moon@gmail.com</a>/<p>
 		<p>OR</p>
 		<input type="email" placeholder="Your email">
-		<input type="submit">
-		<a href="http://www.juliereinken.com"><img src="social-icons/wordpress-64x64.jpg" target="_blank"></a>
+		<input type="submit"><br>
+		<a href="http://www.juliereinken.com" target="_blank"><img src="social-icons/wordpress-64x64.jpg" ></a>
 		<a href="https://twitter.com/juliemoonshow" target="_blank"><img src="social-icons/twitter-64x64.jpg"></a>
+		<a href="https://www.linkedin.com/in/juliereinken" target="_blank"><img src="social-icons/linkedin-64x64.jpg" ></a>
 		</p>
 		<p><a href="index.html"><center>Home</center>
 		</a></p>
